Fix bad z-index

--- a/missingno.css
+++ b/missingno.css
@@ -1,5 +1,5 @@
 .missingno-annotation {
-  z-index: 100000;
+  z-index: 1;
   position: absolute;
   bottom: 0;
   left: 0;
